:pencil2: JHRla / 함수선언.md / 글 수정

--- a/Javascript/함수 선언.md
+++ b/Javascript/함수 선언.md
@@ -8,7 +8,7 @@ function fnc() {
     /*실행코드*/
 }
 ```  
-함수 선언식으로 정의된 함수는 자바스크립트가 로딩되는 시점에 인터프리터가 초기화하고 VO에 저장한다. 따라서 함수 선언 위치와 상관없이 소스 내 어느 곳에서든지 호출이 가능하다. 
+함수 선언식으로 정의된 함수는 자바스크립트가 로딩되는 시점에 인터프리터가 초기화하고 VO에 저장된다. 따라서 함수 선언 위치와 상관없이 소스 내 어느 곳에서든지 호출이 가능하다. 
 
 ## 함수 표현식
 ```javascript
@@ -30,7 +30,7 @@ var fnc = function() {
 
 }());
 ```
-함수표현식은 자바스크립트 로딩시점에 VO에 함수를 저장하지 않고, runtime시에 해석된다. 
+함수표현식은 자바스크립트 로딩시점에 VO에 함수를 저장되지 않고, runtime시에 해석된다. 
 <br>  
 따라서 함수 선언식으로 함수를 정의하면 사용하기 쉽지만, 너무 많은 코드가 VO에 저장되어 애플리케이션의 응답속도가 느려질 수 있다는 것을 주의해야한다. 
 <br>  
@@ -53,7 +53,7 @@ var add = function add(x,y) {
     return x+y;
 };
 ```
-즉, 기명함수와 같은 이름에 함수가 변수로 선언된다. (함수변수)  따라서 add(3, 5)와 같은 명령을 내리면 이는 함수변수의 내부 함수에 접근한 것이 아니라 함수변수에 접근한 것이다. 다음은 함수변수와 내부함수의 이름이 다른 경우이다. 
+즉, 기명함수와 같은 이름에 함수가 변수로 선언된다. (함수변수)  따라서 `add(3, 5)`와 같은 명령을 내리면 이는 함수변수의 내부 함수에 접근한 것이 아니라 함수변수에 접근한 것이다. 다음은 함수변수와 내부함수의 이름이 다른 경우이다. 
 
 ```javascript
 var add = function sum(x, y){
