--- a/Javascript/함수 선언.md
+++ b/Javascript/함수 선언.md
@@ -60,7 +60,7 @@ var add = function sum(x, y){
     return x + y;
 };
 ```
-sum(3, 5)를 명령한 경우 sum함수가 정의되지 않았다는 에러가 뜬다. 함수변수의 내부함수에 직접 접근할 수 없기 때문이다. 따라서 add(3, 5)와 같이 함수변수를 통해 명령을 내려줘야 한다.   
+`sum(3, 5)`를 명령한 경우 sum함수가 정의되지 않았다는 에러가 뜬다. 함수변수의 내부함수에 직접 접근할 수 없기 때문이다. 따라서 `add(3, 5)`와 같이 함수변수를 통해 명령을 내려줘야 한다.   
 
 <br/>  
 
