:pencil2: JHRla / 함수선언.md / 리뷰반영

--- a/Javascript/함수 선언.md
+++ b/Javascript/함수 선언.md
@@ -1,6 +1,5 @@
 # 함수 선언식 / 함수 표현식
 연산자 `function`을 이용해 함수를 정의하는 방법에는 함수 선언식과 함수 표현식이 있다.  
-<br/>
 
 ## 함수 선언식
 ```javascript       
@@ -8,8 +7,9 @@ function fnc() {
     /*실행코드*/
 }
 ```  
-함수 선언식으로 정의된 함수는 자바스크립트가 로딩되는 시점에 인터프리터가 초기화하고 VO에 저장된다. 따라서 함수 선언 위치와 상관없이 소스 내 어느 곳에서든지 호출이 가능하다. 
-
+함수 선언식으로 정의된 함수는 자바스크립트가 로딩되는 시점에 인터프리터가 초기화하고 VO에 저장된다. 따라서 함수 선언 위치와 상관없이 소스 내 어느 곳에서든지 호출이 가능하다.   
+<br/>  
+ 
 ## 함수 표현식
 ```javascript
 //변수에 할당
@@ -117,3 +117,9 @@ document.querySelector("#addEvent").removeEventListener("click", function(e){
 //removeEventListener
 document.querySelector("#addEvent").removeEventListener("click", arguments.callee);
 ```
+
+---
+
+#### Reference
+- [Javascript:함수(function)다시보기] www.nextree.co.kr/p4150
+- 인사이드 자바스크립트 송형주, 고현준
