:pencil2: BKJang / Apply Review

--- a/Typescript/정적 타이핑.md
+++ b/Typescript/정적 타이핑.md
@@ -2,13 +2,13 @@
 
 ## Typescript의 등장
 
-기존에 사용하던 `Javascript`는 대표적인 동적 타이핑의 언어다. 즉, 타입이 정적이지 않기 때문에 `Java`나 `C`와 같은 C-Family언어와 같은 정적 타입의 언어 보다 좀 더 자유롭게 사용할 수 있었다. 물론, 이 부분에 대해서 긍정적인 사람도 있고 부정적인 사람도 있다.
+기존에 사용하던 `Javascript`는 대표적인 동적 타이핑의 언어다. 즉, 타입이 정적이지 않기 때문에 `Java`나 `C`와 같은 C-Family 언어와 같은 정적 타입의 언어보다 좀 더 자유롭게 사용할 수 있다. 물론, 이 부분에 대해서 긍정적인 사람도 있고 부정적인 사람도 있다.
 
-개인적인 생각으로 `Javascript`을 이용하여 큰 규모의 애플리케이션을 개발하면 동적 타입이라는 특성이 불편하게 다가올 때가 많았다. 예를 들어, `string`으로 넘어오는 숫자를 `number`타입으로 명시적 변환을 시켜준다던가 하는 것이 그 예일 수 있을 것 같다.
+개인적인 생각으로 `Javascript`을 이용하여 큰 규모의 애플리케이션을 개발하면 동적 타입이라는 특성이 불편하게 다가올 때가 많았다. 예를 들어, `string`으로 넘어오는 숫자를 `number`타입으로 명시적 변환을 시켜준다던가 하는 것이 그 예다.
 
-물론, `Typescript`에는 기존의 `ES5`와 `ES6`에서 제공하던 기능보다 좀 더 많은 기능을 제공하고 있지만 가장 기본적이고 큰 차이점은 `C-Family`언어와 같이 정적 타입의 언어라는 것이다.
+물론, `Typescript`에는 기존의 `ES5`와 `ES6`에서 제공하던 기능보다 좀 더 많은 기능을 제공하고 있지만, 가장 기본적이고 큰 차이점은 `C-Family` 언어와 같이 정적 타입의 언어라는 것이다.
 
-`ES5`와 `ES6`에서 사용하던 기능들을 그대로 사용하면서 정적 타이핑을 제공하며 그에 수반되는 추가적인 기능들을 제공하기 때문에 타입에 대한 에러를 줄이면서 개발할 수 있는 장점이 있다.
+`ES5`와 `ES6`에서 사용하던 기능들을 그대로 사용하면서 정적 타이핑을 제공하며 그에 수반되는 추가적인 기능들을 제공한다. 덕분에 타입에 대한 에러를 줄이면서 개발할 수 있는 장점이 있다.
 
 <br/>
 
@@ -50,7 +50,8 @@ const numList: number[] = [1, 2, 3];
 const tuple: [string, number];
 tuple = ['hello', 10]; // OK
 tuple = [10, 'hello']; // Error
-tuple = ['hello', 10, 'world', 100]; // Error
+tuple = ['hello', 10, 'world', 100]; // OK
+tuple = ['hello', 10, 'world']; // OK
 tuple.push(true); // Error
 
 // enum : 열거형은 숫자값 집합에 이름을 지정한 것이다.
@@ -81,9 +82,24 @@ function printHello(): void {
   console.log("Hello World");
 }
 
-// never
+/*
+never : never는 함수 표현식의 리턴 타입이거나, 항상 예외를 던지는 화살표 함수 표현식이거나, 리턴하지 않는 표현식이다. 
+*/
+
+// Function returning never must have unreachable end point
 function error(message: string): never {
   throw new Error(message);
+}
+
+// Inferred return type is never
+function fail() {
+    return error("Something failed");
+}
+
+// Function returning never must have unreachable end point
+function infiniteLoop(): never {
+    while (true) {
+    }
 }
 ```
 
@@ -116,7 +132,7 @@ const person: Person = new Person();
 
 ## 함수 매개변수의 타입
 
-`Typescript`에서는 함수의 매개변수도 타입을 지정하여 받을 수 있다. 지정한 타입의 매개변수가 아니라면 에러를 출력하기 때문에 복잡한 애플리케이션이서도 타입 에러를 줄여서 개발할 수 있다.
+`Typescript`에서는 함수의 매개변수도 타입을 지정하여 받을 수 있다. 지정한 타입의 매개변수가 아니라면 에러를 출력하기 때문에 복잡한 애플리케이션에서도 타입 에러를 줄여서 개발할 수 있다.
 
 ```ts
 function person(name: string, age: number): string {
