--- a/Typescript/정적 타이핑.md
+++ b/Typescript/정적 타이핑.md
@@ -2,13 +2,13 @@
 
 ## Typescript의 등장
 
-기존에 사용하던 `Javascript`는 대표적인 동적 타이핑의 언어다. 즉, 타입이 정적이지 않기 때문에 `Java`나 `C`와 같은 C-Family 언어와 같은 정적 타입의 언어보다 좀 더 자유롭게 사용할 수 있다. 물론, 이 부분에 대해서 긍정적인 사람도 있고 부정적인 사람도 있다.
+기존에 사용하던 `Javascript`는 대표적인 동적 타이핑 언어다. 즉, 타입이 정적이지 않기 때문에 정적 타입 언어인 `Java`나 `C`와 같은 C-Family 언어처럼 좀 더 자유롭게 사용할 수 있다. 물론, 이 부분에 대해서 긍정적인 사람도 있고 부정적인 사람도 있다.
 
-개인적인 생각으로 `Javascript`을 이용하여 큰 규모의 애플리케이션을 개발하면 동적 타입이라는 특성이 불편하게 다가올 때가 많았다. 예를 들어, `string`으로 넘어오는 숫자를 `number`타입으로 명시적 변환을 시켜준다던가 하는 것이 그 예다.
+개인적인 생각으로 `Javascript`을 이용하여 큰 규모의 애플리케이션을 개발하면 동적 타입이라는 특성이 불편하게 다가올 때가 많았다. 예를 들어, `string`으로 넘어오는 숫자를 `number`타입으로 명시적 변환을 해야 하는 것이 그 예다.
 
 물론, `Typescript`에는 기존의 `ES5`와 `ES6`에서 제공하던 기능보다 좀 더 많은 기능을 제공하고 있지만, 가장 기본적이고 큰 차이점은 `C-Family` 언어와 같이 정적 타입의 언어라는 것이다.
 
-`ES5`와 `ES6`에서 사용하던 기능들을 그대로 사용하면서 정적 타이핑을 제공하며 그에 수반되는 추가적인 기능들을 제공한다. 덕분에 타입에 대한 에러를 줄이면서 개발할 수 있는 장점이 있다.
+`ES5`와 `ES6`에서 사용하던 기능들을 그대로 사용하면서도, 정적 타이핑을 제공하고 그에 수반되는 추가적인 기능들까지 제공한다. 덕분에 타입에 대한 에러를 줄이면서 개발할 수 있는 장점이 있다.
 
 <br/>
 
@@ -103,7 +103,7 @@ function infiniteLoop(): never {
 }
 ```
 
-위와 같이 `Typescript`의 타입은 모두 소문자다. `Typescript`에서 만약 `string`이 아닌 `String`으로 타입을 선언하면 String 래퍼 객체가 타입으로 지정된다. 즉, 객체도 타입이 될 수 있다.(`Java`에서 `Generics`를 생각하면 쉽다. `Typescript`에도 `Generic`이 있기 때문이다.)
+위와 같이 `Typescript`의 타입은 모두 소문자다. `Typescript`에서 만약 `string`이 아닌 `String`으로 타입을 선언하면 String 래퍼 객체가 타입으로 지정된다. 즉, 객체도 타입이 될 수 있다.(`Java`에서 `Generics`를 생각하면 쉽다. `Typescript`에도 `Generics`이 있기 때문이다.)
 
 ```ts
 let stringValue: string;
@@ -164,7 +164,7 @@ value = 'Hello'; //It's ok
 value = 6; //It's ok
 ```
 
-하지만 위와 같이 `value`라는 변수를 최초에 선언할 때 값을 할당하지 않으면 `any`타입으로 정해지기 때문에 `var`와 같이 동적으로 값을 할당할 수 있는 상태가 된다. <br/>
+이전 예시와 다르게 `value` 변수를 최초에 선언할 때 값을 할당하지 않으면 `any`타입으로 정해진다. 때문에 `var`와 같이 동적으로 값을 할당할 수 있는 상태가 된다. <br/>
 하지만 `any` 타입의 선언 방식은 `Typescript`를 사용하는 의미가 없어지기 때문에 사용하지 않는 것이 좋다.
 
 <br/>
