--- a/Javascript/배열 내장함수.md
+++ b/Javascript/배열 내장함수.md
@@ -114,7 +114,7 @@ console.log(arr.find(item => item.id === 2));
 
 ## splice, slice 
 
-`splice`와 `slice`함수는 배열을에서 특정 원소들을 제거할 때 사용하는 함수다.
+`splice`와 `slice`함수는 배열에서 특정 원소들을 제거할 때 사용하는 함수다.
 
 ### splice
 
@@ -147,7 +147,7 @@ console.log(arr2); //["b", "c"]
 
 ## shift, unshift, push, pop
 
-`shift`, `unshift`, `push`, `pop` 함수는 기존 배열에다가 앞, 뒤로 새로운 원소를 추가하거나 기존 배열의 원소를 하나씩 제거하는 함수다.<br/>
+`shift`, `unshift`, `push`, `pop` 함수는 기존 배열에 앞, 뒤로 새로운 원소를 추가하거나 기존 배열의 원소를 하나씩 제거하는 함수다.<br/>
 이 함수들은 모두 기존 배열에 영향을 미치는 함수들이다. 보통 `Queue`나 `Stack`을 구현할 때 많이 사용하는 함수들이다.
 
 ### shift
