:pencil2: BKJang / Apply Review

--- a/Javascript/배열 내장함수.md
+++ b/Javascript/배열 내장함수.md
@@ -69,7 +69,7 @@ console.log(arr.indexOf('c')); //2
 
 ### findIndex
 
-`findIndex`함수도 `indexOf`함수와 마찬가지로 찾고자 하는 원소의 `index`값을 반환한다. 하지만 원소가 객체로 되어있거나 배열로 되어있을 때 `indexOf`함수로는 `index`값을 찾을 수 없지만 `findIndex` 함수는 조건 처리를 통하여 `index`값을 찾을 수 있다.
+`findIndex`함수도 `indexOf`함수와 마찬가지로 찾고자 하는 원소의 `index`값을 반환한다. 하지만 원소가 객체로 되어있거나 배열로 되어있을 때 `indexOf`함수로는 `index`값을 찾을 수 없다. 반면, `findIndex` 함수는 조건 처리를 통하여 `index`값을 찾을 수 있다.
 
 ```js
 const arr = [
