:pencil2: JHRla / 리뷰 일부 반영

--- a/Javascript/클로저.md
+++ b/Javascript/클로저.md
@@ -36,7 +36,8 @@ outerFunc(); // 1
 
 <br/>
 
-## 스코프 체인
+## 스코프 체인  
+
 스코프 체인은 **하위 함수가 참조하는 상위 함수의 변수 또는 함수의 메모리를 참조하는 것**을 말한다. 스코프 체인에는 렉시컬 스코프의 레퍼런스가 차례대로 저장되어 있고, 이 순서를 따라 자바스크립트 엔진이 검색을 한다.   
 
 첫번째 예제의 스코프 체인을 나타내면 다음과 같다.  
@@ -49,7 +50,7 @@ outerFunc(); // 1
 
 ## 클로저란
 
-이번에는 `outerFunc()`이 내부함수를 반환하고 소멸하도록 바꿔보자
+이번에는 `outerFunc()`이 내부함수를 반환하고 소멸하도록 바꿔보자.
 
 ```js
 function outerFunc() {
@@ -68,7 +69,7 @@ inner.innerFunc2();
 `innerFunc1()`과 `innerFunc2()`는 `outerFunc()`의 `x` 변수를 참조했었는데, `outerFunc()`가 소멸되었으므로 `x`를 참조하지 못할 것 같지만, 각각의 결과로 11, 12가 정상 출력된다.   
 이처럼 **생명주기가 끝난 외부함수의 변수를 참조하는 방법을 클로저**라고 한다. 클로저는 **자신이 선언되었을 때의 환경(lexical Environment), 즉 스코프**를 기억해, 선언된 환경 밖에서 호출되어도 해당 환경에 접근할 수 있는 함수이다.   
 
----- Reference
+--- Reference
 * [클로저](https://poiemaweb.com/js-closure)
 * [JavaScript : Scope 이해](http://www.nextree.co.kr/p7363/)
 * [실행 컨텍스트와 자바스크립트의 동작 원리](https://poiemaweb.com/js-execution-context)
