:pencil2: JHRla / 문맥수정

--- a/Javascript/클로저.md
+++ b/Javascript/클로저.md
@@ -69,7 +69,7 @@ inner.innerFunc2();
 `innerFunc1()`과 `innerFunc2()`는 `outerFunc()`의 `x` 변수를 참조했었는데, `outerFunc()`가 소멸되었으므로 `x`를 참조하지 못할 것 같지만, 각각의 결과로 11, 12가 정상 출력된다.   
 이처럼 **생명주기가 끝난 외부함수의 변수를 참조하는 방법을 클로저**라고 한다. 클로저는 **자신이 선언되었을 때의 환경(lexical Environment), 즉 스코프**를 기억해, 선언된 환경 밖에서 호출되어도 해당 환경에 접근할 수 있는 함수이다.  
 
-클로저가 가능한 이유는 `outerFunc()`의 실행컨텍스트는 소멸되지만 `활성화 객체(AO)`는 **소멸되지 않기 때문**이다. 때문에 `innerFunc1()`과 `innerFunc2()`의 ScopeChain은 유지되어 자바스크립트는 `x`변수를 `outerFunc()`에서 검색할 수 있다. 즉 클로저가 참조하는 변수는 실제 변수의 복사본이 아닌 그 변수를 직접 참조한다. 
+클로저가 가능한 이유는 `outerFunc()`의 실행컨텍스트는 소멸되지만 `활성화 객체(AO)`는 **소멸되지 않기 때문**이다. 때문에 `innerFunc1()`과 `innerFunc2()`의 ScopeChain은 유지되어 자바스크립트는 `x`변수를 `outerFunc()`에서 검색할 수 있다. 즉, 클로저는 실제 변수의 복사본이 아닌 그 변수를 직접 참조한다. 
 
 <br/>
 
