:pencil2: Update HOC Link

--- a/Language/함수형 프로그래밍.md
+++ b/Language/함수형 프로그래밍.md
@@ -93,7 +93,7 @@ const NameContainer = (props) => <h1>{props.name}</h1>
 
 ## 고차함수(High Order Function)
 
-[고차함수(HOC)](http://jeonghwan-kim.github.io/js/2017/04/03/high-order-function-in-javascript.html)는 다른 함수를 인자로 사용하거나 함수를 반환하는 함수, 또는 두 가지 특징을 모두 가진 함수다.
+[고차함수(HOC)](https://github.com/Im-D/Dev-Docs/blob/20190804/BKJang/Language/Higher_Order_Functions.md)는 다른 함수를 인자로 사용하거나 함수를 반환하는 함수, 또는 두 가지 특징을 모두 가진 함수다.
 
 우리가 잘 알고있는 `map`, `reduce`, `filter`와 같은 [배열 내장 함수](https://github.com/Im-D/Dev-Docs/blob/master/Javascript/%EB%B0%B0%EC%97%B4%20%EB%82%B4%EC%9E%A5%ED%95%A8%EC%88%98.md)들이 여기에 속한다.
 
