:pencil2: 오타 수정

--- a/Language/함수형 프로그래밍.md
+++ b/Language/함수형 프로그래밍.md
@@ -6,7 +6,7 @@
 
 함수형 프로그래밍은 객체지향 프로그래밍과 같은 프로그래밍 패러다임의 한 예다. 함수형 프로그래밍은 몇 가지 기본 규칙을 기반으로 애플리케이션을 구성하게 된다.
 
-함수형 프로그래밍을 이해하기 위해서는 몇몇의 핵심 개념들을 이해야하며 이는 위에서 말한 기본 규칙들에 해당된다.
+함수형 프로그래밍을 이해하기 위해서는 몇몇의 핵심 개념들을 이해해야하며 이는 위에서 말한 기본 규칙들에 해당된다.
 
 - [선언형 프로그래밍](#선언형-프로그래밍)
 - [순수함수(Pure Function)](#순수함수(Pure-function))
