:pencil2: 오타 수정

--- a/Language/함수형 프로그래밍.md
+++ b/Language/함수형 프로그래밍.md
@@ -10,7 +10,7 @@
 
 - [선언형 프로그래밍](#선언형-프로그래밍)
 - [순수함수(Pure Function)](#순수함수(Pure-function))
-- [고차함수(High Order Function)](고차함수(High-Order-Function))
+- [고차함수(High Order Function)](#고차함수(High-Order-Function))
 - [합성함수(Function composition)](#합성함수(Function-Composition))
 - [공유 상태를 피하라(Avoid shared state)](#공유-상태를-피하라(Avoid-shared-state))
 - [불변성(Immutable)](#불변성(Immutable))
@@ -86,8 +86,6 @@ const NameContainer = (props) => <h1>{props.name}</h1>
 ```
 
 순수 함수를 사용하면 애플리케이션의 상태에 영향을 주지 않기 때문에 입력 값에 대한 결과를 예상하기 쉽고 이에 따라 테스트하기도 용이하다.
-
-단, **함수형 프로그래밍은 단순히 순수 함수를 작성하는 게 아니다.**
 
 <br/>
 
@@ -207,7 +205,7 @@ console.log(x1(x2(y)).val); //5
 ## 불변성(Immutable)
 
 함수형 프로그래밍에서는 불변성을 유지해야한다. 즉, 데이터가 변할 수 없다. 이를 불변성을 가진다, **Immutable하다** 라고 한다.
-데이터 변경이 필요한 경우, 원본 데이터 구조를 변경하지 않고 그 데이터를 복사본을 만들어 작업을 진행한다.
+데이터 변경이 필요한 경우, 원본 데이터 구조를 변경하지 않고 그 데이터의 복사본을 만들어 작업을 진행한다.
 
 ```js
 // mutable
@@ -236,7 +234,7 @@ console.log(numbers); // [1, 4, 9, 16, 25]
 ```
 
 `squareWithDeepCopy`에서 사용된 배열 내장 함수 중 하나인 `map`은 `Deep Copy`를 통해 연산을 진행하므로 원본 데이터인 `numbers`를 바꾸지 않는다. 이를 `Immutable`하다라고 한다.<br/>
-반면 `square`함수를 통해 연산을 진행하면 원본 데이터인 `numbers`배열의 원소 값을 변경하게 된다. 이를 `Mutable`하다라고 한다.
+반면, `square`함수를 통해 연산을 진행하면 원본 데이터인 `numbers`배열의 원소 값을 변경하게 된다. 이를 `Mutable`하다라고 한다.
 
 <br/>
 
