--- a/Language/함수형 프로그래밍.md
+++ b/Language/함수형 프로그래밍.md
@@ -9,11 +9,11 @@
 함수형 프로그래밍을 이해하기 위해서는 몇몇의 핵심 개념들을 이해해야하며 이는 위에서 말한 기본 규칙들에 해당된다.
 
 - [선언형 프로그래밍](#선언형-프로그래밍)
-- [순수함수(Pure Function)](#순수함수(Pure-function))
-- [고차함수(High Order Function)](#고차함수(High-Order-Function))
-- [합성함수(Function composition)](#합성함수(Function-Composition))
-- [공유 상태를 피하라(Avoid shared state)](#공유-상태를-피하라(Avoid-shared-state))
-- [불변성(Immutable)](#불변성(Immutable))
+- [순수함수(Pure Function)](#순수함수Pure-function)
+- [고차함수(High Order Function)](#고차함수High-Order-Function)
+- [합성함수(Function composition)](#합성함수Function-Composition)
+- [공유 상태를 피하라(Avoid shared state)](#공유-상태를-피하라Avoid-shared-state)
+- [불변성(Immutable)](#불변성Immutable)
 
 <br/>
 
