--- a/Language/함수형 프로그래밍.md
+++ b/Language/함수형 프로그래밍.md
@@ -19,7 +19,7 @@
 
 ## 선언형 프로그래밍
 
-먼저, 함수형 프로그래밍을 선언형 프로그래밍에 속한다. 선언형 프로그래밍을 이해하려면 명령형 프로그래밍에 대한 이해도 수반되어야 한다. 이에 따라 명령형 프로그래밍과 선언형 프로그래밍에 대해 같이 알아보자.
+먼저, 함수형 프로그래밍은 선언형 프로그래밍에 속한다. 선언형 프로그래밍을 이해하려면 명령형 프로그래밍에 대한 이해도 수반되어야 한다. 이에 따라 명령형 프로그래밍과 선언형 프로그래밍에 대해 같이 알아보자.
 
 - 명령형 : `어떻게 할 것인가?(HOW?)`를 설명한다.
 - 선언형 : `무엇을 할 것인가?(WHAT?)`를 설명한다.
@@ -109,7 +109,7 @@ console.log(resultArr); // [100, 400, 900, 1600, 2500]
 
 ## 합성함수(Function Composition)
 
-합성함수는 말그대로 두 가지 이상의 함수가 합성되었음을 뜻한다
+합성함수는 말그대로 두 가지 이상의 함수가 합성되었음을 뜻한다.
 함수형 프로그램은 여러 작은 순수 함수들로 이루어져있기 때문에 이 함수들을 연쇄적으로 또는 병렬로 호출해서 더 큰 함수를 만드는 과정으로 전체 프로그램을 구축해야 한다.
 
 위의 고차함수의 예제에서 주어진 숫자에 10을 곱하고 이를 제곱한 값을 반환하는 `suqareAfterMlt10`이라는 함수를 구현했었다. 하지만 합성 함수를 사용하면 이를 좀 더 간결하고 직관적으로 작성할 수 있다.
@@ -229,7 +229,7 @@ const numbers = [1, 2, 3, 4, 5];
 // immutable
 const squareWithDeepCopy = arr => arr.map(item => item * item);
 
-console.log(squareWithDeepCopy(numbers)); // [1, 4, 9, 16, 25]
+console.log(squareWithDeepCopy(numbers)); // [1, 2, 3, 4, 5]
 console.log(numbers); // [1, 4, 9, 16, 25]
 ```
 
