Update Browser/웹 브라우저의 작동 원리.md
Co-Authored-By: JangBongKi <jp302119@gmail.com>

--- a/Browser/웹 브라우저의 작동 원리.md
+++ b/Browser/웹 브라우저의 작동 원리.md
@@ -35,7 +35,7 @@ HTML5rocks라는 구글이 했던 프로젝트의 [How Browsers Work: Behind the
 
 이미 너무 예전 그림이며 현대에는 더욱더 복잡한 과정을 거친다. 고전적인 rendering 과정이지만 두 엔진은 용어가 조금 다를 뿐 main flow는 비슷하게 작동함을 알 수 있다.
 
-## Critical Rendering Path
+## Critical Rendering Path(CRP)
 
 위처럼 브라우저에서 화면이 그려지기까지의 주요한 과정을 Critical Rendering Path라고 한다.
 
