--- a/Language/함수형 프로그래밍.md
+++ b/Language/함수형 프로그래밍.md
@@ -91,7 +91,7 @@ const NameContainer = (props) => <h1>{props.name}</h1>
 
 ## 고차함수(High Order Function)
 
-고차함수(HOF)는 다른 함수를 인자로 사용하거나 함수를 반환하는 함수, 또는 두 가지 특징을 모두 가진 함수다.
+[고차함수(HOF)](https://github.com/Im-D/Dev-Docs/blob/master/Language/%EA%B3%A0%EC%B0%A8%ED%95%A8%EC%88%98(High%20Order%20Function).md)는 다른 함수를 인자로 사용하거나 함수를 반환하는 함수, 또는 두 가지 특징을 모두 가진 함수다.
 
 우리가 잘 알고있는 `map`, `reduce`, `filter`와 같은 [배열 내장 함수](https://github.com/Im-D/Dev-Docs/blob/master/Javascript/%EB%B0%B0%EC%97%B4%20%EB%82%B4%EC%9E%A5%ED%95%A8%EC%88%98.md)들이 여기에 속한다.
 
@@ -127,6 +127,8 @@ const resultArr = numbers.map(squareAfterMlt10);
 
 console.log(resultArr); // [100, 400, 900, 1600, 2500]
 ```
+
+참고로 위 코드에서 `compose`함수에 사용된 문법은 [Currying](https://github.com/Im-D/Dev-Docs/blob/master/Language/Currying.md)이라는 것인데 여러개의 인자를 가진 함수를 호출 할 경우, 파라미터의 수보다 적은 수의 파라미터를 인자로 받으면 누락된 파라미터를 인자로 받는 기법을 말한다.
 
 <br/>
 
