:pencil2: Apply Review

--- a/Language/함수형 프로그래밍.md
+++ b/Language/함수형 프로그래밍.md
@@ -66,7 +66,7 @@ $("#btn").click(function() {
 
 - 같은 입력이 주어지면, 항상 같은 출력 값을 반환한다.
 - 유용한 순수 함수는 최소 한 개의 매개변수를 가진다.
-- 반드시 무엇인가를 반환한다.
+- 반드시 반환값이 있다.
 - 함수의 실행은 프로그램의 실행에 영향을 미치지 않아야 한다. (`Side effect` 가 없어야 한다)
   - 예를 들어, 함수 내부에서 인자의 값을 변경하거나 애플리케이션의 상태에 영향을 미치는 것이 있다.
 
