Update Browser/웹 브라우저의 작동 원리.md
Co-Authored-By: Dae-Hwa Jeong <daehwa_jeong@outlook.com>

--- a/Browser/웹 브라우저의 작동 원리.md
+++ b/Browser/웹 브라우저의 작동 원리.md
@@ -75,7 +75,7 @@ HTML 파싱 중 CSS 링크를 만나면 리소스를 받아온다.
 
 ![CSSOM](https://user-images.githubusercontent.com/24724691/62413025-52395b00-b645-11e9-9c88-3c3dafedbe46.png)
 
-#### script and css in HTML pasing
+#### script and css in HTML parsing
 
 HTML pasing과정에서 코드를 읽는 중 script나 css만난 경우 어떻게 처리될까?
 
