--- a/Browser/웹 브라우저의 작동 원리.md
+++ b/Browser/웹 브라우저의 작동 원리.md
@@ -4,7 +4,7 @@
 
 현대 브라우저들의 렌더링 엔진은 다양하다. gecko기반의 spider monkey를 사용하는 firefox, webkit - blink기반의 V8을 사용하는 chrome, webkit을 사용하는 safari 등 상당히 종류가 많다.
 
-하지만 모든 브라우저는 크게 비슷한 flow로 동작하며 다음은 그 뼈대인 main flow다.
+하지만 모든 브라우저는 크게 비슷한 flow로 동작하며 다음의 그림은 그 뼈대인 main flow다.
 
 ![mainflow](https://user-images.githubusercontent.com/24724691/62412557-96296180-b63f-11e9-9f0c-fe14a3914629.png)
 
@@ -77,7 +77,7 @@ HTML 파싱 중 CSS 링크를 만나면 리소스를 받아온다.
 
 #### script and css in HTML parsing
 
-HTML pasing과정에서 코드를 읽는 중 script나 css만난 경우 어떻게 처리될까?
+HTML parsing과정에서 코드를 읽는 중 script나 css만난 경우 어떻게 처리될까?
 
 - script
 
