:pencil2: 점진적향상 vs 우아한하향

--- a/Performance/점진적향상_우아한하향.md
+++ b/Performance/점진적향상_우아한하향.md
@@ -6,31 +6,49 @@
 
 ## 우아한 낮춤(Graceful degradation)
 
-- 원하는 기능을 갖는 또다른 버전을 제공하거나, 사용자가 제품의 결점이 사용성을 보장하기 위한 안전 조치때문이라는 것을 인지하도록 만드는 것이다.
-- 최신 기술 기반 또는 기기에서 동작하는 기능을 만들고 나서 오래된 기술 기반 혹은 기기에서도 유사한 성능으로 동작하도록 조치하는 것이다.
-- 사용자들의 기기를 위해 별도의 버전을 만들어 놓는 것이다.
+`Graceful Degradation`, 이 자체는 사실 단어만 보면 크게 와닿지 않는다.
+이는 기능을 제대로 구현하면서, 기술적인 이유나 Device의 호환성 여부에 의해 해당 기능을 제공받지 못하는 사용자에게 다른 버전의 대체 기능을 제공한다.
+혹은, 단순히 `맥 OS에서는 해당 기능을 제공할 수 없기 때문에 Windows 컴퓨터를 이용해주세요.`와 같은 문구를 제공한다.
 
-<br/>
+정리하면 다음과 같다.
 
-ex) 사용자의 브라우저가 javascript를 지원하지 않을 때
+- 원하는 기능을 갖는 또다른 버전을 제공하거나, 사용자가 제품의 결점이 사용성을 보장하기 위한 안전 조치때문이라는 것을 인지하도록 만드는 것.
+- 최신 기술 기반 또는 기기에서 동작하는 기능을 만들고 나서 오래된 기술 기반 혹은 기기에서도 유사한 성능으로 동작하도록 조치하는 것.
+- 사용자들의 기기를 위해 별도의 버전을 만들어 놓는 것.
 
-- js를 지원하지 않는 기기를 위해 <noscript> 태그를 사용하여 사용자에게 "javascript가 지원되는 브라우저를 사용해 주세요!" 와 같은 알람을 띄워주는 것
+`Graceful Degradation`이 유용한 경우가 있다.
+
+- 오랜된 제품을 새로 개발하기엔 시간이 부족하고 방법과 영향도를 파악할 수 없는 경우.
+- 일반적으로 `Graceful Degradation`을 통해 개발이 진행되면 성능이 더 좋을 확률이 높기 때문에 수행 속도에 민감한 애플리케이션의 경우.(ex, rAF vs jQuery .animate)
 
 <br/>
 
 ## 점진적 향상(Progressive enhancement)
 
-- 사용가능한 기능을 바탕으로, 향상된 기능을 적용하기 전에 테스트를 통해 풍부한 사용자 경험을 하나씩 증가시키는 것이다.
-- 많은 테스트를 통해 말그대로 기능을 점진적으로 향상시키는 것.
-- 기초부터 차곡차곡 쌓아서 발전해 나가는 방법
+`Progressive Enhancement`는 `Graceful Degradation`과 반대로 생각하면 된다.
+웹의 관점에서 봤을 때 이에는 몇 가지 원칙이 있는데 다음과 같다.
 
-<br/>
+- 컨텐츠가 모든 브라우저에서 표현되어야 한다.
+- 기능이 모든 브라우저에서 사용되어야 한다.
+- `Semantic Markup`으로 표시되어야 한다.(HTML5)
+- 레이아웃의 향상은 `CSS`로 처리한다.
+- 동작의 향상은 `unobtrusive javascript`로 처리한다.
+- 사용자가 브라우저 설정을 원하는대로 변경해도 기능이 잘 동작한다.
 
-ex ) 웹 페이지를 구성할 때
+> unobtrusive javascript란 필수적인 기능들을 HTML만으로 최대한 처리하고 그 위에 JS를 이용해 기능을 추가한다는 의미.
 
-1. HTML로 마크업을 구성한다.
-2. CSS로 스타일을 입힌다.
-3. JS로 사용자 경험을 향상 시킨다.
+몇 가지 특징을 정리해보면 다음과 같다.
+
+- 사용가능한 기능을 바탕으로, 향상된 기능을 적용하기 전에 테스트를 통해 풍부한 사용자 경험을 **하나씩 증가**시키는 것이다.
+- 많은 테스트를 통해 말그대로 **기능을 점진적으로 향상**시키는 것.
+- **기초부터 차곡차곡** 쌓아서 발전해 나가는 방법
+
+해당 개발접근법을 적용한 대표적인 예로 `jQuery`가 있다. HTML의 기능을 충분히 활용하도록 설계되었기 때문에 다른 JS의 사용을 최소화할 수 있다고 설명하고 있다.
+<br/>결국, `jQuery`도 JS기 떄문에 살짝 모순적인 얘기일 수 있다.
+하지만, `jQuery`가 크로스 브라우징을 해결할 수 있는 대표적인 방법 중 하나라는 것은 이를 방증한다고 볼 수 있을 것 같다.
+
+보통 우리는 `Graceful Degradation`을 많이 봐왔을 것이다. 브라우저가 다양화되고 기술의 지원 여부가 브라우저에 따라 상이하기 때문이다.
+하지만, 어떻게 보면 `Progressive Enhancement`접근법을 통해 개발된 애플리케이션의 경우, 사용자가 인지할 수 없기 때문에 전자가 더 많다고 보기도 어려울 수 있다.
 
 <br/>
 
@@ -39,3 +57,5 @@ ex ) 웹 페이지를 구성할 때
 #### Reference 
 
 - [적절한 낮춤 대 점진적 향상](http://www.clearboth.org/51_graceful_degradation_versus_progressive_enhancement/)
+- [Progressive Enhancement와 Graceful Degradation](https://m.blog.naver.com/PostView.nhn?blogId=sef16&logNo=70164174952&proxyReferer=https%3A%2F%2Fwww.google.com%2F)
+- [W3C - Graceful degradation versus progressive enhancement](https://www.w3.org/wiki/Graceful_degradation_versus_progressive_enhancement)
