:pencil2: Apply Review

--- a/Performance/점진적향상_우아한하향.md
+++ b/Performance/점진적향상_우아한하향.md
@@ -28,12 +28,12 @@
 `Progressive Enhancement`는 `Graceful Degradation`과 반대로 생각하면 된다.
 웹의 관점에서 봤을 때 이에는 몇 가지 원칙이 있는데 다음과 같다.
 
-- 컨텐츠가 모든 브라우저에서 표현되어야 한다.
-- 기능이 모든 브라우저에서 사용되어야 한다.
-- `Semantic Markup`으로 표시되어야 한다.(HTML5)
-- 레이아웃의 향상은 `CSS`로 처리한다.
-- 동작의 향상은 `unobtrusive javascript`로 처리한다.
-- 사용자가 브라우저 설정을 원하는대로 변경해도 기능이 잘 동작한다.
+- 컨텐츠가 모든 브라우저에서 표현.
+- 기능이 모든 브라우저에서 사용.
+- `Semantic Markup`으로 표시.(HTML5)
+- 레이아웃의 향상은 `CSS`로 처리.
+- 동작의 향상은 `unobtrusive javascript`로 처리.
+- 사용자가 브라우저 설정을 원하는대로 변경해도 기능이 잘 동작함.
 
 > unobtrusive javascript란 필수적인 기능들을 HTML만으로 최대한 처리하고 그 위에 JS를 이용해 기능을 추가한다는 의미.
 
@@ -44,7 +44,8 @@
 - **기초부터 차곡차곡** 쌓아서 발전해 나가는 방법
 
 해당 개발접근법을 적용한 대표적인 예로 `jQuery`가 있다. HTML의 기능을 충분히 활용하도록 설계되었기 때문에 다른 JS의 사용을 최소화할 수 있다고 설명하고 있다.
-<br/>결국, `jQuery`도 JS기 떄문에 살짝 모순적인 얘기일 수 있다.
+
+결국, `jQuery`도 JS기 떄문에 살짝 모순적인 얘기일 수 있다.
 하지만, `jQuery`가 크로스 브라우징을 해결할 수 있는 대표적인 방법 중 하나라는 것은 이를 방증한다고 볼 수 있을 것 같다.
 
 보통 우리는 `Graceful Degradation`을 많이 봐왔을 것이다. 브라우저가 다양화되고 기술의 지원 여부가 브라우저에 따라 상이하기 때문이다.
