:pencil2: Apply Review

--- a/Performance/점진적향상_우아한하향.md
+++ b/Performance/점진적향상_우아한하향.md
@@ -1,10 +1,10 @@
 # 점진적 향상, 우아한 하향
 
-2가지 개발접근법이 있다. 우아한 낮춤과 점진적인 향상.<br/>
+2가지 개발접근법이 있다. 우아한 하향과 점진적인 향상.<br/>
 간단히 정리하자면 다음과 같이 정의할 수 있다.
 <br/>
 
-## 우아한 낮춤(Graceful degradation)
+## 우아한 하향(Graceful degradation)
 
 `Graceful Degradation`, 이 자체는 사실 단어만 보면 크게 와닿지 않는다.
 이는 기능을 제대로 구현하면서, 기술적인 이유나 Device의 호환성 여부에 의해 해당 기능을 제공받지 못하는 사용자에게 다른 버전의 대체 기능을 제공한다.
@@ -55,7 +55,7 @@
 
 ---
 
-#### Reference 
+#### Reference
 
 - [적절한 낮춤 대 점진적 향상](http://www.clearboth.org/51_graceful_degradation_versus_progressive_enhancement/)
 - [Progressive Enhancement와 Graceful Degradation](https://m.blog.naver.com/PostView.nhn?blogId=sef16&logNo=70164174952&proxyReferer=https%3A%2F%2Fwww.google.com%2F)
