--- a/OpenCV/이미지전처리.md
+++ b/OpenCV/이미지전처리.md
@@ -49,7 +49,7 @@ cv2.imshow("thresholding",img_thresh)
 `Thresholding`은 임계값을 이미지 **전체에 적용**하여 처리하기 때문에,   
 원본 영상에 조명이 일정하지 않거나 배경색이 여러 가지인 경우에는 아무리 여러번    
 경계값을 바꿔가며 시도해도 일부 영역이 모두 흰색 또는 검정색으로 보여지게 된다.   
-'AdaptiveThresholding'은 이미지를 작은 영역별로 나누어 thresholding을 하는 것이다.   
+'AdaptiveThresholding'은 이미지를 작은 영역으로 나누어 각 영역 별로 thresholding을 하는 것이다.   
 
 ```python
  #threshold only
