--- a/OpenCV/이미지전처리.md
+++ b/OpenCV/이미지전처리.md
@@ -21,9 +21,15 @@ cv2.imshow("org",img_ori)
 gray = cv2.cvtColor(img_ori, cv2.COLOR_BGR2GRAY)
 cv2.imshow("gray",gray)
 ```
-<br>![1](https://user-images.githubusercontent.com/43839951/78467561-eade2880-7748-11ea-9d2e-028ab843b9dd.jpg)<br>
+<br>![1](https://user-images.githubusercontent.com/43839951/78467561-eade2880-7748-11ea-9d2e-028ab843b9dd.jpg)
 
-<br>![gray](https://user-images.githubusercontent.com/43839951/78553294-f5311d00-7843-11ea-95a1-b25881264a0e.JPG)<br><br>
+
+
+<br>![gray](https://user-images.githubusercontent.com/43839951/78553294-f5311d00-7843-11ea-95a1-b25881264a0e.JPG)
+
+
+
+
 
 
 ## Thresholding   
