[update/SeonHyungJo] : Update 오탈자

--- a/ML/머신러닝이란.md
+++ b/ML/머신러닝이란.md
@@ -6,7 +6,7 @@
 
 어떤 언어로 어떤 코드를 작성하는 지는 상관 없이, 데이터를 어떻게 효율적으로 가공하고, 패턴이나 관계를 찾아 존재하지 않는 결과를 예측한다면 목적을 이뤘다고 본다. 즉 인간이 하나부터 열까지 직접 가르치는 기계를 의미하는 것이 아니라, 학습할 것을 일단 던져주고 이걸 가지고 스스로 학습하는 기계를 의미한다.
 
-"Field of study that gives computers the ability to learn without being explicitly programmed”
+> "Field of study that gives computers the ability to learn without being explicitly programmed”
 프로그램을 명시적으로 짜 놓는 것이 아닌, 컴퓨터가 스스로 학습할 수 있는 능력을 부여하는 연구분야
 
 # Machine Learning의 종류
@@ -90,7 +90,7 @@
 
 # 간단한 이미지 분류를 해보자
 
-## 쉽게 이미지 분류를 할 수 있는 사이트
+### 쉽게 이미지 분류를 할 수 있는 사이트
 
 [https://teachablemachine.withgoogle.com/train/image](https://teachablemachine.withgoogle.com/train/image)
 
