[update/jigi-kim]: 오타수정
Co-authored-by: Hoyeonjiki Kim <jigi.kim@gmail.com>

--- a/CS/플로이드-와샬-알고리즘.md
+++ b/CS/플로이드-와샬-알고리즘.md
@@ -44,7 +44,7 @@ for (int i = 0; i < n; i++) {
 > int를 사용할 경우 `Integer.MAX_VALUE/2` 이하의 값을 최댓값으로 사용할 수 있다. `k`를 거치는 경우 두 값을 더하기 때문에 int 최댓값을 사용하면 안 된다. [그래프 완성하기](#그래프-완성하기)를 보고 다시 보면 이해가 될 것이다.
 
 ```java
-int[][] edges = ...; // edges[n][0] 은 시작점, [1]은 도착점, [2]는 가중치라고 이며, 충분한 데이터가 들었다고 가정한다.
+int[][] edges = ...; // edges[n][0] 은 시작점, [1]은 도착점, [2]는 가중치이며, 충분한 데이터가 들었다고 가정한다.
 
 // 가중치 옮기기
 for (int i = 0; i < edges.size(); i++) {
